--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "lite-server": "^2.5.4",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
