--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "lite-server": "^2.5.4",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
